navbar fix styling on mobile

--- a/src/Components/HeaderImage/index.css
+++ b/src/Components/HeaderImage/index.css
@@ -294,16 +294,6 @@ h1 {
 }
 
 @media (max-width: 600px) {
-  .Title {
-    font-size: 35px !important;
-    margin: 0;
-    vertical-align: middle;
-    margin-top: 1%;
-    margin-left: 1%;
-    margin-bottom: -1%;
-    /* margin-right: auto; */
-  }
-
   .headerImage_Button {
     margin-top: 10px;
     width: 100px;
